--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "generate-openapi": "openapi-generator-plus -o src/openapi/ -g @openapi-generator-plus/typescript-fetch-client-generator openapi.json",
+    "generate-openapi": "openapi-generator-plus -o src/openapi/ -g @openapi-generator-plus/typescript-fetch-client-generator https://raw.githubusercontent.com/tfilo/my-cookery-book-2-backend/alpha-0.0.1/src/openapi.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
