--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.189",
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -16,6 +17,7 @@
     "bootstrap": "^5.2.2",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "openapi-generator-plus": "^2.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
