--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openapi-generator-plus": "^2.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.4.2",
