--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.10",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
