--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,28 +3,27 @@ name: Docker Image CI
 on:
   push:
     tags: [ "*" ]
-    branches: [ "main" ]
 
 jobs:
-#  lintAndBuild:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        node-version: [18.x]
-#    steps:
-#    - uses: actions/checkout@v3
-#    - uses: actions/setup-node@v3
-#      with:
-#        node-version: ${{ matrix.node-version }}
-#        cache: 'npm'
-#        cache-dependency-path: './package-lock.json'
-#    - run: npm ci
+  lintAndBuild:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: './package-lock.json'
+    - run: npm ci
 #    - run: npm run lint
-#    - run: npm run generate-openapi
-#    - run: npm run build
+    - run: npm run generate-openapi
+    - run: npm run build
 
   docker:
-#    needs: lintAndBuild
+    needs: lintAndBuild
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
