--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "my-cookery-book-2-frontend",
   "version": "0.1.0",
-  "private": true,
+  "author": "Petra Filová",
+  "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -12,34 +13,32 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.189",
-    "@types/node": "^16.11.64",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "openapi-generator-plus": "^2.3.1",
+    "openapi-generator-plus": "^2.3.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.4",
-    "react-router-dom": "^6.4.2",
+    "react-hook-form": "^7.41.5",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "react-to-print": "^2.14.10",
-    "typescript": "^4.8.4",
+    "react-to-print": "^2.14.11",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "generate-openapi": "openapi-generator-plus -o src/openapi/ -g @openapi-generator-plus/typescript-fetch-client-generator https://raw.githubusercontent.com/tfilo/my-cookery-book-2-backend/alpha-0.0.7/src/openapi.json && sed -i \"s|localVarHeaderParameter.set('Content-Type', 'multipart/form-data');|//removed content type|g\" src/openapi/api.ts",
-    "eject": "react-scripts eject"
+    "generate-openapi": "openapi-generator-plus -o src/openapi/ -g @openapi-generator-plus/typescript-fetch-client-generator https://raw.githubusercontent.com/tfilo/my-cookery-book-2-backend/alpha-0.0.7/src/openapi.json && sed -i \"s|localVarHeaderParameter.set('Content-Type', 'multipart/form-data');|//removed content type|g\" src/openapi/api.ts"
   },
   "eslintConfig": {
     "extends": [
