--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "author": "Petra Filová",
   "license": "MIT",
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -19,7 +20,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.3",
-    "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "openapi-generator-plus": "^2.3.3",
@@ -31,8 +31,8 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.11",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
