--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-cookery-book-2-frontend",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Petra Filová",
   "license": "MIT",
   "proxy": "http://localhost:8080/",
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
