--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,21 +62,21 @@ services:
             REFRESH_TOKEN_VALIDITY: '30d'
             THUMBNAIL_DIMENSION: 640
             IMAGE_DIMENSION: 2048
-            EMAIL_HOST: 'localhost'
+            EMAIL_HOST: 'email'
             EMAIL_PORT: 1025
             EMAIL_USER:
             EMAIL_PASS:
             EMAIL_FROM: 'test@noreply.com'
             RESET_LINK_VALIDITY: 12
             MAIL_CONFIRM_SUBJECT: 'My Cookery Book 2: Email confirmation'
-            MAIL_CONFIRM_TEMPLATE_TXT_HBS: 'Welcome {{fullName}}, please confirm your email by filling form https://localhost:3000/confirm with following key {{key}} and {{username}}.'
-            MAIL_CONFIRM_TEMPLATE_HTML_HBS: "<h1>Welcome {{fullName}},</h1><p>please confirm your email by filling form https://localhost:3000/confirm with following key <b>{{key}}</b> and <b>{{username}}</b>. For better convenience, you can use this <a href='https://localhost:3000/confirm/{{username}}/{{key}}'>link</a>.</p>"
+            MAIL_CONFIRM_TEMPLATE_TXT_HBS: 'Welcome {{fullName}}, please confirm your email by filling form http://localhost:3000/confirm with following key {{key}} and {{username}}.'
+            MAIL_CONFIRM_TEMPLATE_HTML_HBS: "<h1>Welcome {{fullName}},</h1><p>please confirm your email by filling form http://localhost:3000/confirm with following key <b>{{key}}</b> and <b>{{username}}</b>. For better convenience, you can use this <a href='http://localhost:3000/confirm/{{username}}/{{key}}'>link</a>.</p>"
             MAIL_NOTIFICATION_SUBJECT: 'My Cookery Book 2: new recipes'
             MAIL_NOTIFICATION_TEMPLATE_TXT_HBS: "Hello {{fullName}}, here are some new recipes for you. \n {{#each recipes}} - {{name}}, http://localhost:3000/recipe/display/{{id}} \n{{/each}}"
             MAIL_NOTIFICATION_TEMPLATE_HTML_HBS: "<h1>Hello {{fullName}},</h1><p>here are some new recipes for you.</p><ul>{{#each recipes}}<li><a href='http://localhost:3000/recipe/display/{{id}}' target='_blank' rel='bookmark'>{{name}}</a></li>{{/each}}</ul>"
             MAIL_RESET_SUBJECT: 'My Cookery Book 2: Password reset'
-            MAIL_RESET_TEMPLATE_TXT_HBS: 'Hello {{fullName}}, please reset your password on following link https://localhost:3000/reset using your username and following key {{key}}.'
-            MAIL_RESET_TEMPLATE_HTML_HBS: "<h1>Hello {{fullName}},</h1><p>please reset your password on following <a href='https://localhost:3000/reset/{{key}}'>link</a> using your username and following key <b>{{key}}</b>.</p>"
+            MAIL_RESET_TEMPLATE_TXT_HBS: 'Hello {{fullName}}, please reset your password on following link http://localhost:3000/reset using your username and following key {{key}}.'
+            MAIL_RESET_TEMPLATE_HTML_HBS: "<h1>Hello {{fullName}},</h1><p>please reset your password on following <a href='http://localhost:3000/reset/{{key}}'>link</a> using your username and following key <b>{{key}}</b>.</p>"
         depends_on:
             db:
                 condition: service_healthy
