--- a/package.json
+++ b/package.json
@@ -1,67 +1,88 @@
 {
-  "name": "my-cookery-book-2-frontend",
-  "version": "1.1.3",
-  "author": "Petra Filová",
-  "license": "MIT",
-  "proxy": "http://localhost:8080/",
-  "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/resolvers": "^2.9.11",
-    "@openapi-generator-plus/typescript-fetch-client-generator": "^1.6.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^16.18.86",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-router-dom": "^5.3.3",
-    "bootstrap": "^5.3.3",
-    "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
-    "openapi-generator-plus": "^2.14.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-bootstrap-typeahead": "^6.3.2",
-    "react-cookie-consent": "^8.0.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1",
-    "react-to-print": "^2.15.1",
-    "sass": "^1.71.1",
-    "typescript": "^4.9.5",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "start": "npm run generate-openapi && react-scripts start",
-    "build": "npm run generate-openapi && react-scripts build",
-    "generate-openapi": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml && replace-in-file --configFile=replace-config.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "del-cli": "^5.1.0",
-    "replace-in-file": "^6.3.5"
-  }
+    "name": "my-cookery-book-2-frontend",
+    "version": "1.1.3",
+    "author": "Petra Filová",
+    "license": "MIT",
+    "proxy": "http://localhost:8080/",
+    "dependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@hookform/resolvers": "^2.9.11",
+        "@openapi-generator-plus/typescript-fetch-client-generator": "^1.6.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/lodash": "^4.14.202",
+        "@types/node": "^16.18.86",
+        "@types/react": "^18.2.61",
+        "@types/react-dom": "^18.2.19",
+        "@types/react-router-dom": "^5.3.3",
+        "bootstrap": "^5.3.3",
+        "jwt-decode": "^3.1.2",
+        "lodash": "^4.17.21",
+        "openapi-generator-plus": "^2.14.2",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.10.1",
+        "react-bootstrap-typeahead": "^6.3.2",
+        "react-cookie-consent": "^8.0.1",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.50.1",
+        "react-router-dom": "^6.22.2",
+        "react-scripts": "5.0.1",
+        "react-to-print": "^2.15.1",
+        "sass": "^1.71.1",
+        "typescript": "^4.9.5",
+        "yup": "^0.32.11"
+    },
+    "scripts": {
+        "start": "npm run generate-openapi && react-scripts start",
+        "build": "npm run generate-openapi && react-scripts build",
+        "generate-openapi": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml && replace-in-file --configFile=replace-config.js",
+        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+        "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+        "prettier": "prettier . --check",
+        "prettier:fix": "prettier . --write",
+        "licenseReport": "license-report --package=./package.json --output=table --config license-report.json > ./LIBRARIES"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest",
+            "prettier"
+        ],
+        "rules": {
+            "spaced-comment": "error",
+            "camelcase": "error",
+            "quotes": [
+                "error",
+                "single",
+                {
+                    "avoidEscape": true
+                }
+            ],
+            "no-duplicate-imports": "error"
+        }
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "del-cli": "^5.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "license-report": "^6.5.0",
+        "prettier": "^3.2.5",
+        "replace-in-file": "^6.3.5"
+    }
 }
