--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@hookform/resolvers": "^2.9.11",
         "@openapi-generator-plus/typescript-fetch-client-generator": "^1.6.0",
+        "@tanstack/react-query": "^5.25.0",
+        "@tanstack/react-query-devtools": "^5.25.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
