--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         }
     ],
     "license": "MIT",
-    "proxy": "http://localhost:8080/",
+    "proxy": "https://recepty.tope.sk/",
     "scripts": {
         "start": "npm run generate-openapi && react-scripts start",
         "build": "npm run generate-openapi && react-scripts build",
@@ -31,44 +31,44 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@fortawesome/fontawesome-svg-core": "^6.5.2",
-        "@fortawesome/free-regular-svg-icons": "^6.5.2",
-        "@fortawesome/free-solid-svg-icons": "^6.5.2",
-        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@hookform/resolvers": "^2.9.11",
-        "@openapi-generator-plus/typescript-fetch-client-generator": "^1.6.1",
-        "@tanstack/react-query": "^5.29.2",
-        "@tanstack/react-query-devtools": "^5.29.2",
+        "@openapi-generator-plus/typescript-fetch-client-generator": "1.6.1",
+        "@tanstack/react-query": "^5.56.2",
+        "@tanstack/react-query-devtools": "^5.58.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/lodash": "^4.17.0",
-        "@types/node": "^16.18.96",
-        "@types/react": "^18.2.79",
-        "@types/react-dom": "^18.2.25",
+        "@types/lodash": "^4.17.9",
+        "@types/node": "^16.18.112",
+        "@types/react": "^18.3.10",
+        "@types/react-dom": "^18.3.0",
         "bootstrap": "^5.3.3",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
-        "openapi-generator-plus": "^2.14.2",
-        "react": "^18.2.0",
-        "react-bootstrap": "^2.10.2",
+        "openapi-generator-plus": "2.14.2",
+        "react": "^18.3.1",
+        "react-bootstrap": "^2.10.5",
         "react-bootstrap-typeahead": "^6.3.2",
         "react-cookie-consent": "^8.0.1",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.51.3",
-        "react-router-dom": "^6.22.3",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
+        "react-router-dom": "^6.26.2",
         "react-scripts": "5.0.1",
         "react-to-print": "^2.15.1",
-        "sass": "^1.75.0",
+        "sass": "^1.79.4",
         "typescript": "^4.9.5",
         "yup": "^0.32.11"
     },
     "devDependencies": {
         "del-cli": "^5.1.0",
         "eslint-config-prettier": "^9.1.0",
-        "license-report": "^6.5.0",
-        "prettier": "^3.2.5",
+        "license-report": "^6.7.0",
+        "prettier": "^3.3.3",
         "replace-in-file": "^6.3.5"
     },
     "eslintConfig": {
