Update of packages and migration to react 19

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,8 @@ on:
 jobs:
 
   docker:
+    permissions:
+      actions: read
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
