--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,14 +11,13 @@ on:
   
 jobs:
   build:
-
+    permissions:
+      actions: read
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
