--- a/package.json
+++ b/package.json
@@ -1,105 +1,83 @@
 {
-    "name": "my-cookery-book-2-frontend",
-    "version": "1.3.0",
-    "description": "Personal cookery book",
-    "homepage": "https://recepty.ddns.net",
-    "repository": {
-        "url": "https://github.com/tfilo/my-cookery-book-2-frontend",
-        "type": "github"
-    },
-    "author": {
-        "name": "Petra Filová",
-        "url": "https://github.com/petrafilova"
-    },
-    "contributors": [
-        {
-            "name": "Tomáš Filo",
-            "url": "https://github.com/tfilo"
-        }
-    ],
-    "license": "MIT",
-    "proxy": "http://localhost:8080/",
-    "scripts": {
-        "start": "npm run generate-openapi && react-scripts start",
-        "build": "npm run generate-openapi && react-scripts build",
-        "generate-openapi": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml && replace-in-file --configFile=replace-config.js",
-        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-        "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-        "prettier": "prettier . --check",
-        "prettier:fix": "prettier . --write",
-        "licenseReport": "license-report --package=./package.json --output=table --config license-report.json > ./LIBRARIES"
-    },
-    "dependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@fortawesome/fontawesome-svg-core": "^6.6.0",
-        "@fortawesome/free-regular-svg-icons": "^6.6.0",
-        "@fortawesome/free-solid-svg-icons": "^6.6.0",
-        "@fortawesome/react-fontawesome": "^0.2.2",
-        "@hookform/resolvers": "^2.9.11",
-        "@openapi-generator-plus/typescript-fetch-client-generator": "1.6.1",
-        "@tanstack/react-query": "^5.56.2",
-        "@tanstack/react-query-devtools": "^5.58.0",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/lodash": "^4.17.9",
-        "@types/node": "^16.18.112",
-        "@types/react": "^18.3.10",
-        "@types/react-dom": "^18.3.0",
-        "bootstrap": "^5.3.3",
-        "jwt-decode": "^3.1.2",
-        "lodash": "^4.17.21",
-        "openapi-generator-plus": "2.14.2",
-        "react": "^18.3.1",
-        "react-bootstrap": "^2.10.5",
-        "react-bootstrap-typeahead": "^6.3.2",
-        "react-cookie-consent": "^8.0.1",
-        "react-dom": "^18.3.1",
-        "react-hook-form": "^7.53.0",
-        "react-router-dom": "^6.26.2",
-        "react-scripts": "5.0.1",
-        "react-to-print": "^2.15.1",
-        "sass": "^1.79.4",
-        "typescript": "^4.9.5",
-        "yup": "^0.32.11"
-    },
-    "devDependencies": {
-        "del-cli": "^5.1.0",
-        "eslint-config-prettier": "^9.1.0",
-        "license-report": "^6.7.0",
-        "prettier": "^3.3.3",
-        "replace-in-file": "^6.3.5"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest",
-            "prettier"
-        ],
-        "rules": {
-            "spaced-comment": "error",
-            "camelcase": "error",
-            "quotes": [
-                "error",
-                "single",
-                {
-                    "avoidEscape": true
-                }
-            ],
-            "no-duplicate-imports": "error"
-        }
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+  "name": "my-cookery-book-2-frontend",
+  "version": "1.4.0",
+  "description": "Personal cookery book",
+  "homepage": "https://recepty.ddns.net",
+  "repository": {
+    "url": "https://github.com/tfilo/my-cookery-book-2-frontend",
+    "type": "github"
+  },
+  "author": {
+    "name": "Petra Filová",
+    "url": "https://github.com/petrafilova"
+  },
+  "contributors": [
+    {
+      "name": "Tomáš Filo",
+      "url": "https://github.com/tfilo"
     }
+  ],
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "npm run apigen && tsc -b && vite build",
+    "apigen": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --check",
+    "prettier:fix": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
+    "licenseReport": "license-report --package=./package.json --output=table --config license-report.json > ./LIBRARIES",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^4.1.3",
+    "@openapi-generator-plus/typescript-fetch-client-generator": "1.11.0",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.68.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "bootstrap": "^5.3.3",
+    "del-cli": "^6.0.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jwt-decode": "^4.0.0",
+    "license-report": "^6.7.2",
+    "lint-staged": "^15.5.0",
+    "lodash": "^4.17.21",
+    "openapi-generator-plus": "2.20.0",
+    "prettier": "^3.5.3",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-typeahead": "^7.0.0-rc.5",
+    "react-cookie-consent": "^9.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.3.0",
+    "react-to-print": "^3.0.5",
+    "sass": "^1.85.1",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.2",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-istanbul": "^7.0.0",
+    "vite-plugin-minify": "^2.1.0",
+    "whatwg-fetch": "^3.6.20",
+    "yup": "^1.6.1"
+  }
 }
