Adding cypress tests, initial commit

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
-        "types": ["node"],
+        "types": ["cypress", "node"],
 
         /* Bundler mode */
         "moduleResolution": "Bundler",
@@ -26,6 +26,6 @@
         // "verbatimModuleSyntax": true,
         "allowSyntheticDefaultImports": true
     },
-    "include": ["src"],
+    "include": ["cypress", "src"],
     "exclude": ["node_modules", "dist"]
 }
