--- a/package.json
+++ b/package.json
@@ -1,83 +1,91 @@
 {
-  "name": "my-cookery-book-2-frontend",
-  "version": "1.4.0",
-  "description": "Personal cookery book",
-  "homepage": "https://recepty.ddns.net",
-  "repository": {
-    "url": "https://github.com/tfilo/my-cookery-book-2-frontend",
-    "type": "github"
-  },
-  "author": {
-    "name": "Petra Filová",
-    "url": "https://github.com/petrafilova"
-  },
-  "contributors": [
-    {
-      "name": "Tomáš Filo",
-      "url": "https://github.com/tfilo"
+    "name": "my-cookery-book-2-frontend",
+    "version": "1.4.0",
+    "description": "Personal cookery book",
+    "homepage": "https://recepty.ddns.net",
+    "repository": {
+        "url": "https://github.com/tfilo/my-cookery-book-2-frontend",
+        "type": "github"
+    },
+    "author": {
+        "name": "Petra Filová",
+        "url": "https://github.com/petrafilova"
+    },
+    "contributors": [
+        {
+            "name": "Tomáš Filo",
+            "url": "https://github.com/tfilo"
+        }
+    ],
+    "license": "MIT",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "npm run apigen && tsc -b && vite build",
+        "apigen": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml",
+        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+        "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+        "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --check",
+        "prettier:fix": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
+        "cy:open": "npm run cy:clear && cypress open",
+        "cy:run": "npm run cy:clear && cypress run --e2e --browser firefox",
+        "cy:clear": "del-cli cypress/results/*.xml && del-cli cypress/screenshots/* && del-cli .nyc_output/*",
+        "nyc:coverage": "nyc report --reporter=text",
+        "prepare": "husky",
+        "licenseReport": "license-report --package=./package.json --output=table --config license-report.json > ./LIBRARIES"
+    },
+    "dependencies": {
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "devDependencies": {
+        "@cypress/code-coverage": "^3.13.12",
+        "@eslint/js": "^9.22.0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@hookform/resolvers": "^4.1.3",
+        "@openapi-generator-plus/typescript-fetch-client-generator": "1.11.0",
+        "@tanstack/eslint-plugin-query": "^5.68.0",
+        "@tanstack/react-query": "^5.68.0",
+        "@tanstack/react-query-devtools": "^5.68.0",
+        "@types/lodash": "^4.17.16",
+        "@types/node": "^22.13.10",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "bootstrap": "^5.3.3",
+        "cypress": "^14.2.0",
+        "del-cli": "^6.0.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^16.0.0",
+        "husky": "^9.1.7",
+        "jwt-decode": "^4.0.0",
+        "license-report": "^6.7.2",
+        "lint-staged": "^15.5.0",
+        "lodash": "^4.17.21",
+        "mocha-junit-reporter": "^2.2.1",
+        "nyc": "^17.1.0",
+        "openapi-generator-plus": "2.20.0",
+        "prettier": "^3.5.3",
+        "react-bootstrap": "^2.10.9",
+        "react-bootstrap-typeahead": "^7.0.0-rc.5",
+        "react-cookie-consent": "^9.0.0",
+        "react-hook-form": "^7.54.2",
+        "react-router-dom": "^7.3.0",
+        "react-to-print": "^3.0.5",
+        "sass": "^1.85.1",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.1",
+        "vite": "^6.2.2",
+        "vite-plugin-html": "^3.2.2",
+        "vite-plugin-istanbul": "^7.0.0",
+        "vite-plugin-minify": "^2.1.0",
+        "whatwg-fetch": "^3.6.20",
+        "yup": "^1.6.1"
     }
-  ],
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "npm run apigen && tsc -b && vite build",
-    "apigen": "del-cli src/openapi && openapi-generator-plus -c openapi-config.yml",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --check",
-    "prettier:fix": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
-    "licenseReport": "license-report --package=./package.json --output=table --config license-report.json > ./LIBRARIES",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^4.1.3",
-    "@openapi-generator-plus/typescript-fetch-client-generator": "1.11.0",
-    "@tanstack/eslint-plugin-query": "^5.68.0",
-    "@tanstack/react-query": "^5.68.0",
-    "@tanstack/react-query-devtools": "^5.68.0",
-    "@types/lodash": "^4.17.16",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "bootstrap": "^5.3.3",
-    "del-cli": "^6.0.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "husky": "^9.1.7",
-    "jwt-decode": "^4.0.0",
-    "license-report": "^6.7.2",
-    "lint-staged": "^15.5.0",
-    "lodash": "^4.17.21",
-    "openapi-generator-plus": "2.20.0",
-    "prettier": "^3.5.3",
-    "react-bootstrap": "^2.10.9",
-    "react-bootstrap-typeahead": "^7.0.0-rc.5",
-    "react-cookie-consent": "^9.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.3.0",
-    "react-to-print": "^3.0.5",
-    "sass": "^1.85.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.2",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-istanbul": "^7.0.0",
-    "vite-plugin-minify": "^2.1.0",
-    "whatwg-fetch": "^3.6.20",
-    "yup": "^1.6.1"
-  }
 }
