--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -42,38 +42,38 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.3",
     "@openapi-generator-plus/typescript-fetch-client-generator": "1.11.0",
-    "@tanstack/eslint-plugin-query": "^5.68.0",
-    "@tanstack/react-query": "^5.68.0",
-    "@tanstack/react-query-devtools": "^5.68.0",
-    "@types/lodash": "^4.17.16",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "bootstrap": "^5.3.3",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@tanstack/react-query": "^5.76.2",
+    "@tanstack/react-query-devtools": "^5.76.2",
+    "@types/lodash": "^4.17.17",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
+    "bootstrap": "^5.3.6",
     "del-cli": "^6.0.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jwt-decode": "^4.0.0",
     "license-report": "^6.7.2",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
     "openapi-generator-plus": "2.20.0",
     "prettier": "^3.5.3",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^2.10.10",
     "react-bootstrap-typeahead": "^7.0.0-rc.5",
     "react-cookie-consent": "^9.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.3.0",
-    "react-to-print": "^3.0.5",
-    "sass": "^1.85.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.2",
+    "react-hook-form": "^7.56.4",
+    "react-router-dom": "^7.6.0",
+    "react-to-print": "^3.1.0",
+    "sass": "^1.89.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-istanbul": "^7.0.0",
     "vite-plugin-minify": "^2.1.0",
